--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Allmaya/allmaya-back#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "koa": "^2.13.4"
   }
 }
