--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Allmaya/allmaya-back#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "googleapis": "^39.2.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1"
