--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/Allmaya/allmaya-back#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "google-auth-library": "^7.14.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1"
