--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src"
+    "start": "node src",
+    "dev": "nodemon --watch src/ src/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
     "mongoose": "^6.2.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
